add router to toggle habit
